# MiaoClaw

./: .gitignore  README.md  SOUL.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
assets/pets/smd/lp8/: 8.pqc  bt.smd  idle.smd  walk.smd
plugins/reminder/: index.ts  miaoclaw.plugin.json
plugins/system-info/: index.ts  miaoclaw.plugin.json
plugins/web-search/: index.ts  miaoclaw.plugin.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/ai/: codex.rs  mod.rs  ollama.rs  openai_compat.rs  provider.rs  router.rs
src-tauri/src/channel/: manager.rs  message.rs  mod.rs
src-tauri/src/config/: manager.rs  mod.rs  types.rs
src-tauri/src/plugin/: api.rs  compat.rs  engine.rs  manifest.rs  mod.rs
src-tauri/src/storage/: db.rs
src/components/Chat/: ChatWindow.tsx  MessageBubble.tsx
src/components/Pet/: BedrockRenderer.tsx  CSSRenderer.tsx  Live2DRenderer.tsx  LottieRenderer.tsx  PetRenderer.tsx  PetWindow.tsx  PixiRenderer.tsx  SMDRenderer.tsx
src/components/Settings/: AISetupWizard.tsx  SettingsPanel.tsx
src/hooks/: useAPI.ts  useClickThrough.ts
src/lib/: pqcParser.ts  smdParser.ts
src/stores/: chatStore.ts  petStore.ts  settingsStore.ts
src/types/: index.ts  plugin.ts
